<resources>
    <string name="app_name">Tracking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Settings</string>
    <string name="menu_send">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_add_a_device">Add a device</string>
    <string name="startTracking">Start Tracking</string>
    <string name="stopTracking">Stop Tracking</string>
    <string name="clear_all_locations">Clear All Locations</string>
    <string name="start_track">Start Track</string>
    <string name="get_all_location">Get All Locations</string>
</resources>
